# msiKeyboard

./: CMakeLists.txt  README.md
cmake/Modules/: Findhidapi.cmake
inc/: ColorUnifier.hpp  HidDevice.hpp  MsiKeyboard.hpp
src/: ColorUnifier.cpp  HidDevice.cpp  MsiKeyboard.cpp  main.cpp
